# 42-Learn2Slither

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  project-requirements.md  pyproject.toml  snake  snake.py  train.py
c_src/: Makefile
c_src/board/: board  board.c  board.h  board_apples.c  board_helpers.c  board_internal.h  board_move.c  board_query.c  board_setup.c  board_state.c  rewards.c  test_board.c
c_src/tests/: Makefile  README.md  test_board_creation.c  test_board_edge_cases.c  test_board_memory.c  test_board_validation.c  test_helpers.c  test_runner.c  tests.h
display/: __init__.py  fonts.py  grid.py  hud.py  info.py  layout.py  overlays.py  panel.py  settings.py  theme.py
docs/: tooling.md
models/: qtable-001.json  qtable-010.json  qtable-100.json  qtable-10000.json
scripts/: __init__.py  manual.py  train.py
slither/: __init__.py  _library.py  agent.py  board.py  rewards.py  utils.py  viewer.py
slither/core/: __init__.py  _library.py  _types.py  board.py  rewards.py
tests/: __init__.py  test.py
tests/validation/: __init__.py  __main__.py  helpers.py  test_agent.py  test_board_creation.py  test_movement_edges.py  test_output_flow.py  test_rewards.py  test_state_queries.py
