[project]
name = "learn2slither"
version = "0.1.0"
description = "A snake that learns how to behave in an environment through trial and error."
authors = [{ name = "Jhonata" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",  # For testing
    "pygame>=2.5",  # For game visualization
    "pre-commit>=3.6",  # For git hook management
]

[project.scripts]
snake = "snake:main"
learn2slither = "snake:main"
learn2slither-manual = "scripts.manual:main"
learn2slither-train = "train:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "slither", from = "." }
]

[dependency-groups]
dev = [
    "pygame (>=2.6.1,<3.0.0)"
]
